@@ -33,7 +33,9 @@ struct _GamTree {
                                  */
     GHashTable *node_hash;      /* a hash table that maps path->node */
 
+#ifdef WITH_TREADING
     GMutex *lock;
+#endif
 };
 
 typedef struct {
@@ -78,7 +80,9 @@ gam_tree_new(void)
     tree->root = new_node(gam_node_new("/", NULL, TRUE));
     tree->node_hash = g_hash_table_new_full(g_str_hash, g_str_equal,
                                             g_free, NULL);
+#ifdef WITH_TREADING
     tree->lock = g_mutex_new();
+#endif
 
     return tree;
 }
@@ -93,7 +97,9 @@ gam_tree_free(GamTree * tree)
 {
     g_node_destroy(tree->root);
     g_hash_table_destroy(tree->node_hash);
+#ifdef WITH_TREADING
     g_mutex_free(tree->lock);
+#endif
 
     g_free(tree);
 }
@@ -111,10 +117,12 @@ gam_tree_add(GamTree * tree, GamNode * parent, GamNode * child)
 {
     GNode *node;
 
+#ifdef WITH_TREADING
     g_mutex_lock(tree->lock);
+#endif
 
     if (g_hash_table_lookup(tree->node_hash, gam_node_get_path(child)))
-        return FALSE;
+        return FALSE; /* lock ??? */
 
     /*
      * g_message ("Adding child: %s to %s, %d : %s",
@@ -128,7 +136,9 @@ gam_tree_add(GamTree * tree, GamNode * parent, GamNode * child)
     g_hash_table_insert(tree->node_hash,
                         g_strdup(gam_node_get_path(child)), node);
 
+#ifdef WITH_TREADING
     g_mutex_unlock(tree->lock);
+#endif
 
     return TRUE;
 }
@@ -145,7 +155,9 @@ gam_tree_remove(GamTree * tree, GamNode * node)
 {
     gboolean ret = FALSE;
 
+#ifdef WITH_TREADING
     g_mutex_lock(tree->lock);
+#endif
 
     if (g_node_is_ancestor(tree->root, node->node)) {
 
@@ -158,7 +170,9 @@ gam_tree_remove(GamTree * tree, GamNode * node)
         ret = TRUE;
     }
 
+#ifdef WITH_TREADING
     g_mutex_unlock(tree->lock);
+#endif
 
     return ret;
 }
